# app/Models/User.php
@@ -6,11 +6,11 @@ use Illuminate\Contracts\Auth\MustVerifyEmail;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Laravel\Passport\HasApiTokens;
 
 class User extends Authenticatable
 {
-    use HasFactory;
-    use Notifiable;
+    use HasFactory, Notifiable , HasApiTokens;
 
     /**
      * The attributes that are mass assignable.
@@ -53,4 +53,17 @@ class User extends Authenticatable
     protected $appends = [
         'profile_photo_url',
     ];
+
+    
+    public function wishlist(){
+        return $this->hasMany(Wishlist::class , 'user_id');
+    }
+
+    public function cart(){
+        return $this->hasOne(Cart::class , 'user_id');
+    }
+
+    public function cartItems(){
+        return $this->hasMany(CartItem::class , 'user_id');
+    }
 }
